; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_print_start.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_print_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@in_readline = common dso_local global i64 0, align 8
@readline_disabled = common dso_local global i64 0, align 8
@prompt_was = common dso_local global i32 0, align 4
@readline_active = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_start() #0 {
  %1 = load i64, i64* @in_readline, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %19

4:                                                ; preds = %0
  %5 = load i64, i64* @readline_disabled, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  br label %19

8:                                                ; preds = %4
  %9 = load i32, i32* @prompt_was, align 4
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i64, i64* @readline_active, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %8
  %17 = call i32 (...) @deactivate_readline()
  br label %18

18:                                               ; preds = %16, %8
  store i32 1, i32* @prompt_was, align 4
  br label %19

19:                                               ; preds = %18, %7, %3
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @deactivate_readline(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
